--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html >
 <head><meta charset="utf-8">
-<title>PornLink - 2023年最好的色情网站导航!</title>
+<title>PornLink - 2023&#24180;&#26368;&#22909;&#30340;&#33394;&#24773;&#32593;&#31449;&#23548;&#33322;!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta name="description" content="PornLink 向你推荐最好的色情网站。找到2023年网上最安全最好的色情网站上的高清色情视频,提供优质明星的最新照片和作品资料以及番号!">
-<meta name="keywords" content="PornLink,导航,AV,福利视频,AV导航,日本AV女优,欧美AV女优,亚洲韩国AV,成人网站,女优网站,蓝色导航,a片导航"><link rel="modulepreload" as="script" crossorigin href="/nuxt/entry.c0b54710.js"><link rel="preload" as="style" href="/nuxt/entry.fdd1ab6d.css"><link rel="prefetch" as="script" crossorigin href="/nuxt/error-component.aff3b7a7.js"><link rel="stylesheet" href="/nuxt/entry.fdd1ab6d.css"></head>
-<body ><div id="__nuxt"></div><script>window.__NUXT__={serverRendered:false,config:{public:{},app:{baseURL:"\u002F",buildAssetsDir:"nuxt",cdnURL:""}},data:{},state:{}}</script><script type="module" src="/nuxt/entry.c0b54710.js" crossorigin></script></body>
+<meta name="keywords" content="PornLink,导航,AV,福利视频,AV导航,日本AV女优,欧美AV女优,亚洲韩国AV,成人网站,女优网站,蓝色导航,a片导航"><link rel="modulepreload" as="script" crossorigin href="/nuxt/entry.75ac0a0a.js"><link rel="preload" as="style" href="/nuxt/entry.0102b30a.css"><link rel="prefetch" as="script" crossorigin href="/nuxt/error-component.f841163c.js"><link rel="stylesheet" href="/nuxt/entry.0102b30a.css"></head>
+<body ><div id="__nuxt"></div><script>window.__NUXT__={serverRendered:false,config:{public:{},app:{baseURL:"\u002F",buildAssetsDir:"nuxt",cdnURL:""}},data:{},state:{}}</script><script type="module" src="/nuxt/entry.75ac0a0a.js" crossorigin></script></body>
 </html>
